# sign-language-translator

./: .gitignore  LICENSE  OPTIMIZATION_GUIDE.md  QUICKSTART.md  README.md  app.py  requirements.txt
models/: arsl_model.h5  asl_model.h5
notebooks/: ASL_Model_Optimization_90percent.ipynb  IMPROVEMENTS_ANALYSIS.md  INTEGRATION_GUIDE.md  Live_Translation_Pipeline.ipynb  README.md  SUMMARY.md  pyproject.toml
scripts/: build_dataset_from_images.py  build_dataset_from_landmarks.py  collect_data.py  init_dirs.py  prepare_data.py  train_from_landmarks.py  train_model.py
src/: __init__.py  gesture_recognizer.py  languages.py  pose_detector.py  utils.py
